--- a/index.html
+++ b/index.html
@@ -50,8 +50,49 @@
   .choice.correct{background:linear-gradient(90deg,#16a34a33,#16a34a22);border-color:rgba(22,163,74,0.3)}
   .choice.wrong{background:linear-gradient(90deg,#ef444433,#ef444422);border-color:rgba(239,68,68,0.25)}
   .nav{display:flex;gap:8px;align-items:center;margin-top:12px}
+
+  /* Base buttons */
   button.btn{background:var(--primary);color:white;padding:10px 12px;border-radius:8px;border:0;cursor:pointer}
   button.ghost{background:transparent;border:1px solid rgba(6,54,26,0.06);color:var(--muted);padding:8px 10px;border-radius:8px;cursor:pointer}
+
+  /* Button hover and active effects (added) */
+  button.btn, button.ghost {
+    transition: all 0.2s ease, transform 0.15s ease;
+  }
+  button.btn:hover {
+    background: #256928;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    transform: translateY(-2px);
+  }
+  button.btn:active {
+    transform: scale(0.97);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2) inset;
+  }
+  button.ghost:hover {
+    background: rgba(6,54,26,0.05);
+    border-color: rgba(6,54,26,0.2);
+    transform: translateY(-2px);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  }
+  button.ghost:active {
+    transform: scale(0.97);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.15) inset;
+  }
+
+  /* Question grid button hover/click effects (added) */
+  .qnum {
+    transition: transform 0.15s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+  }
+  .qnum:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    border-color: rgba(10,60,20,0.12);
+  }
+  .qnum:active {
+    transform: scale(0.97);
+    box-shadow: inset 0 2px 4px rgba(0,0,0,0.12);
+  }
+
   .tools{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   footer.small{font-size:13px;color:var(--muted);margin-top:10px}
   /* result modal */
