--- a/index.html
+++ b/index.html
@@ -110,13 +110,19 @@
   #reviewBtn {
     display: none !important;
   }
+  .logo{
+  width: 80px;
+  height: 80px;
+  font-size: 40px;   /* emoji size */
+  line-height: 1;    /* keeps it nicely centered */
+}
 </style>
 </head>
 <body>
   <div class="app">
     <header>
       <div class="brand">
-        <div class="logo">AS</div>
+        <div class="logo">🌱</div>
         <div>
           <h1>Animal Science — Mock Licensure Exam</h1>
           <div class="small">Prepared for licensure review — import your JSON to begin</div>
